--- a/ToolCore/templates/ToolCore/paper.html
+++ b/ToolCore/templates/ToolCore/paper.html
@@ -12,19 +12,50 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/1.3.5/jspdf.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf-autotable/3.0.5/jspdf.plugin.autotable.js"></script>
     <script>
+         
         function generatePDF() {
             const element = document.getElementById('paper-section'); 
             const options = {
                 margin:[10,0,0,0],
                 autoScale:true,
-                filename: 'output.pdf',
+                filename: 'paper.pdf',
                 hyphenate: true,
                 html2canvas: { scale: 2, letterRendering: true,},
                 jsPDF: { unit: 'mm', format: 'letter', orientation: 'p' }
             };
-            //options.jsPDF.format = [610, 397]; // [width, height] in millimeters
+            
             html2pdf().set(options).from(element).save();
 
+        }
+        var paperId = "{{paperId}}";
+        function getCSRFToken() {
+        const cookieValue = document.cookie
+            .split('; ')
+            .find(row => row.startsWith('csrftoken='))
+            .split('=')[1];
+        
+        return cookieValue;
+        }
+
+        var formData = new FormData();
+        function processPDF() {
+  
+            $.ajax({
+                url: '/save_paper/' + paperId + '/',
+                type: 'POST',
+                data: formData,
+                processData: false,
+                contentType: false,
+                headers: {
+                            'X-CSRFToken': getCSRFToken()
+                    },
+                success: function(response) {
+                console.log('PDF file saved successfully.');
+                },
+                error: function(xhr, status, error) {
+                console.error('An error occurred while saving the PDF file:', error);
+                }
+            });
         }
     </script>
 </head>
@@ -42,11 +73,12 @@
     </div>
 
 
-    <!-- <div class="answersheet">
-        <h3>Answer Sheet</h3>
-    </div> -->
+    <div id="paper-solution" style="display: none;">
+        <h3>Paper Solution</h3>
+    </div>
 
     <script>
+       
         $('div.question').each(function() {
         var questionDiv = $(this);
         var pTag = questionDiv.find('p');
@@ -59,6 +91,54 @@
         ulTag.remove();
         });
 
+
+
+
+        const element = document.getElementById('paper-section'); 
+        const solutionelement = document.getElementById('paper-solution').innerHTML; 
+            const options = {
+                margin:[10,0,0,0],
+                autoScale:true,
+                filename: 'paper.pdf',
+                hyphenate: true,
+                html2canvas: { scale: 2, letterRendering: true,},
+                jsPDF: { unit: 'mm', format: 'letter', orientation: 'p' }
+            };
+            
+            html2pdf()
+            .set(options)
+            .from(element)
+            .outputPdf('blob')
+            .then((pdfBlob) => {
+            console.log('Paper size:', pdfBlob.size);
+            formData.append('pdf_file', pdfBlob, 'paper.pdf');
+            })
+            .catch((error) => {
+            console.error('An error occurred while generating the PDF:', error);
+            });
+
+            const option2 = {
+                margin:[10,0,0,0],
+                autoScale:true,
+                filename: 'solution.pdf',
+                hyphenate: true,
+                html2canvas: { scale: 2, letterRendering: true,},
+                jsPDF: { unit: 'mm', format: 'letter', orientation: 'p' }
+            };
+            
+            html2pdf()
+            .set(option2)
+            .from(solutionelement)
+            .outputPdf('blob')
+            .then((pdfBlob) => {
+            console.log('Solution size:', pdfBlob.size);
+            formData.append('pdf_file2', pdfBlob, 'solution.pdf');
+            processPDF();
+
+            })
+            .catch((error) => {
+            console.error('An error occurred while generating the PDF:', error);
+            });
 
     </script>
 </body>
