--- a/static/book-chapter.css
+++ b/static/book-chapter.css
@@ -29,7 +29,6 @@ li{
 .accordian .outerlab::after{
     content: "+";
     float: right;
-    /* margin-right:10px; */
     font-size: 24px;
     font-weight: 700;
 }
@@ -104,4 +103,27 @@ margin-right: 15px;
   .action:hover{
     background-color: #333;
     color: #fff;
+  }
+  @media screen and (max-width: 600px){
+    .accordian{
+        width: 350px;
+        padding: 7px 10px;
+    }
+    .accordian li label.outerlab {
+        font-size: 18px;
+    }
+    .content ul{
+        margin-left: -37px;
+    }
+    .content ul li{
+       width: 80%;
+    }
+    .innerlab{
+        font-size: 18px;
+    }
+    .inner{
+        width: 15px;
+        height: 15px;
+        margin-right: 15px;
+    }
   }
