--- a/static/style.css
+++ b/static/style.css
@@ -44,7 +44,6 @@ li{
   .main-section {
     padding: 60px;
     min-height: fit-content;
-    height: 70vh;
     text-align: center;
   }
   
@@ -157,9 +156,11 @@ li{
     font-size: 14px;
     color: #666;
   }
+
+
   
   /* Media Query for Mobile View */
-  @media screen and (max-width: 600px) {
+  @media screen and (max-width: 500px) {
     .top-nav {
       flex-direction: column;
       align-items: center;
@@ -190,4 +191,10 @@ li{
       padding: 10px;
     }
   }
+  
+
+  /* popup tool login*/
+
+ 
+  /* Styling for the overlay */
   
