--- a/ToolCore/templates/ToolCore/homepage.html
+++ b/ToolCore/templates/ToolCore/homepage.html
@@ -1,116 +1,19 @@
 {% load static %}
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
-    <title>Landing Page</title>
-    <link rel="stylesheet" type="text/css" href="{% static 'style.css' %}">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.2/font/bootstrap-icons.css" integrity="sha384-b6lVK+yci+bfDmaY1u0zE8YYJt0TZxLEAFyYSLHId4xoVvsrQu3INevFKo+Xir8e" crossorigin="anonymous">
-<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet"
-integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
-integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm"
-crossorigin="anonymous"></script>
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
 <link href="https://fonts.googleapis.com/css2?family=Kanit:wght@100;400&display=swap" rel="stylesheet">
-<style>
-    body{
-    background-color: rgb(66, 72, 116);
-    color: aliceblue;
-    }
-    li {
-    list-style: none;
-    }
-
-    a {
-        text-decoration: none;
-        color: aliceblue;
-    }
-    /* Styling for the overlay */
-    .overlay {
-        position: fixed;
-        top: 0;
-        left: 0;
-        width: 100%;
-        height: 100%;
-        background-color: rgba(0, 0, 0, 0.5);
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        z-index: 9999;
-        visibility: hidden;
-        opacity: 0;
-        transition: opacity 0.3s ease;
-    }
-
-    /* Styling for the popup form */
-    .popup-form {
-        background-color: white;
-        padding: 20px;
-        border-radius: 5px;
-        width: 300px;
-        max-width: 90%;
-        text-align: center;
-        box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
-        position: relative;
-        color: black;
-    }
-
-    /* Styling for the close button */
-    .close-button {
-        cursor: pointer;
-        font-size: 24px;
-        position: absolute;
-        top: 0px;
-        right: 12px;
-    }
-
-    /* Styling for the form inputs */
-    form input {
-        display: block;
-        width: 100%;
-        padding: 8px;
-        margin-bottom: 10px;
-        border: 1px solid #ccc;
-        border-radius: 4px;
-        box-sizing: border-box;
-    }
-
-    /* Styling for the form labels */
-    form label {
-        font-weight: bold;
-        display: block;
-        margin-bottom: 5px;
-    }
-
-    /* Styling for the form submit button */
-    form input[type="submit"] {
-        background-color: #4CAF50;
-        color: white;
-        padding: 10px;
-        border: none;
-        border-radius: 4px;
-        cursor: pointer;
-    }
-
-    .form-message {
-    margin-top: 5px;
-    padding: 5px;
-    color: white;
-    font-weight: bold;
-}
-
-.form-message.success {
-    background-color: #4CAF50;
-}
-
-.form-message.error {
-    background-color: #F44336;
-}
-
-</style>
+<link rel="stylesheet" href="{% static 'style.css' %}">
+<title>Landing Page</title>
 </head>
 <body>
 
