--- a/staticfiles/style.css
+++ b/staticfiles/style.css
@@ -1,3 +1,99 @@
+body{
+    background-color: rgb(66, 72, 116);
+    color: aliceblue;
+    }
+
+    li {
+    list-style: none;
+    }
+
+    a {
+        text-decoration: none;
+        color: aliceblue;
+    }
+    /* Styling for the overlay */
+    .overlay {
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background-color: rgba(0, 0, 0, 0.5);
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        z-index: 9999;
+        visibility: hidden;
+        opacity: 0;
+        transition: opacity 0.3s ease;
+    }
+
+    /* Styling for the popup form */
+    .popup-form {
+        background-color: white;
+        padding: 20px;
+        border-radius: 5px;
+        width: 300px;
+        max-width: 90%;
+        text-align: center;
+        box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
+        position: relative;
+        color: black;
+    }
+
+    /* Styling for the close button */
+    .close-button {
+        cursor: pointer;
+        font-size: 24px;
+        position: absolute;
+        top: 0px;
+        right: 12px;
+    }
+
+    /* Styling for the form inputs */
+    form input {
+        display: block;
+        width: 100%;
+        padding: 8px;
+        margin-bottom: 10px;
+        border: 1px solid #ccc;
+        border-radius: 4px;
+        box-sizing: border-box;
+    }
+
+    /* Styling for the form labels */
+    form label {
+        font-weight: bold;
+        display: block;
+        margin-bottom: 5px;
+    }
+
+    /* Styling for the form submit button */
+    form input[type="submit"] {
+        background-color: #4CAF50;
+        color: white;
+        padding: 10px;
+        border: none;
+        border-radius: 4px;
+        cursor: pointer;
+    }
+
+    .form-message {
+    margin-top: 5px;
+    padding: 5px;
+    color: white;
+    font-weight: bold;
+}
+
+.form-message.success {
+    background-color: #4CAF50;
+}
+
+.form-message.error {
+    background-color: #F44336;
+}
+
+
 
 nav {
     display: flex;
@@ -271,8 +367,22 @@ footer{
 margin: 5px;
 font-size: 24px;
 }
-/* Responsive Navbar */
-@media screen and (max-width: 768px) {
+
+
+.bi-whatsapp:hover{
+    color: green;
+}
+.bi-facebook:hover{
+    color: blue;
+}
+.bi-instagram:hover{
+    color: rgb(228, 64, 95);
+}
+.bi-google:hover{
+    color: red;
+}
+
+@media screen and (max-width: 700px) {
     nav {
         display: flex;
         justify-content: space-between;
@@ -514,15 +624,3 @@ font-size: 24px;
 
 }
 
-.bi-whatsapp:hover{
-    color: green;
-}
-.bi-facebook:hover{
-    color: blue;
-}
-.bi-instagram:hover{
-    color: rgb(228, 64, 95);
-}
-.bi-google:hover{
-    color: red;
-}
