--- a/ToolCore/templates/ToolCore/book-chapter.html
+++ b/ToolCore/templates/ToolCore/book-chapter.html
@@ -5,12 +5,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="{% static 'book-chapter.css' %}">
+    <link rel="stylesheet" href="{% static 'navbar.css' %}">
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <title>Document</title>
     <style>
     </style>
 </head>
 <body>
+  {%include 'ToolCore/navbar.html' %}
   <h1 class="main-heading">Select Chapter Corresponds to book</h1>
     <div class="accordian">
      <form method="POST">
