--- a/ToolCore/templates/ToolCore/homepage.html
+++ b/ToolCore/templates/ToolCore/homepage.html
@@ -19,7 +19,8 @@
 
     <nav>
         <div class="logo">
-            <h1>PaperBuilder</h1>
+            <!-- <h1>PaperBuilder</h1> -->
+            <img src="{% static 'paperbuilder.png' %}" alt="">
         </div>
         <div class="hamburger" id="hamburger">
             <span></span>
@@ -34,7 +35,7 @@
             </ul>
             <ul class="login-btn">
                 {% if user|length != 0  %}     
-                <div class="d-flex flex-row ">{{ user|upper }}
+                <div class="d-flex flex-row username">{{ user|upper }}
                 <a href="{% url 'logout'%}">Logout</a></div>
                 {% else %}
                 <li><a href="{% url 'user-login'%}">Login</a></li>
@@ -51,51 +52,11 @@
             {% if user|length != 0  %}
             <a href="{% url 'tool' %}" class="create-now">Create now</a>
             {% else %}
-            <button onclick="openForm()" class="start-btn">Login</button>
+            <button onclick="openForm()" class="start-btn">Create Paper Free</button>
             {% endif %}
         </div>
     </header>
-    <!-- <header>
-        <nav class="top-nav">
-            <div class="logo">
-                <img src="{% static 'Padaku_small.png' %}" alt="Logo">
-            </div>
-            <div class="login-signup">
-                {% if user|length != 0  %}     
-                <div class="d-flex flex-row"><p class="my-auto text-success username m-lg-2"> Welcome, {{ user }}</p>
-                <a href="{% url 'logout'%}">Logout</a></div>
-                {% else %}
-                <a href="{% url 'user-login'%}">Login</a>
-                <a href="{% url 'user-register'%}">Signup</a>
-                {% endif %}
-            </div>
-        </nav>
-    </header>
-
-    <section class="main-section">
-        <div class="center-heading">
-            
-                <h1 class="first-heading">Paper Creation Tool</h1> 
-                <h1 class="heading"><span id="headmove"></span>|</h1>
-            
-                <ul>  
-                    <li><i class="fa fa-check" aria-hidden="true" style="color: #147920;"></i>  Create beautiful papers effortlessly.</li>
-                    <li><i class="fa fa-check" aria-hidden="true" style="color: #147920;"></i>  Different Varieties of formats available.</li>
-                    <li><i class="fa fa-check" aria-hidden="true" style="color: #147920;"></i>  Various types of questions like MCQ,Fill Up,Theory etc.</li>
-                    <li><i class="fa fa-check" aria-hidden="true" style="color: #147920;"></i>  Question of image content also available.</li>
-                    <li><i class="fa fa-check" aria-hidden="true" style="color: #147920;"></i>  Material cover wide range of ncerts book questions.</li>
-                </ul>
-            
-        </div>
-
-        {% if user|length != 0  %}
-        <a href="{% url 'tool' %}" class="start-btn">Enter Tool</a>
-        {% else %}
-        <button onclick="openForm()" class="start-btn">Login</button>
-        {% endif %}
-        
-    </section> -->
-    
+       
     <div id="popupForm" class="overlay">
         <div class="popup-form">
             <span class="close-button" onclick="closeForm()">&times;</span>
